--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "dev": "SET DEBUG=inventtory-site:* & npm run devstart"
+    "dev": "SET DEBUG=inventory-site:* & npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
