--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "SET DEBUG=inventory-site:* & npm run devstart"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
@@ -18,6 +19,8 @@
     "luxon": "^3.4.4",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.3",
     "pug": "2.0.0-beta11"
   }
