--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 MONGO_URL='mongodb+srv://<username>:<password>@cluster0.zrgnc6j.mongodb.net/?retryWrites=true&w=majority'
+CLOUD_NAME=your cloud name goes here 
+CLOUDINARY_KEY=your API KEY goes here 
+CLOUDINARY_SECRET=your secrete goes here 
