--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
