--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inventtory-site",
   "version": "0.0.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=20.9.0"
   },
   "private": true,
   "scripts": {
@@ -14,12 +14,14 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
