--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 MONGO_URL='mongodb+srv://<username>:<password>@cluster0.zrgnc6j.mongodb.net/?retryWrites=true&w=majority'
-CLOUD_NAME=your cloud name goes here 
-CLOUDINARY_KEY=your API KEY goes here 
-CLOUDINARY_SECRET=your secrete goes here 
+PORT=3000
+NODE_ENV="development | production"
+CLOUD_NAME=your_cloud_name_goes_here 
+CLOUDINARY_KEY=your_API_KEY_goes_here 
+CLOUDINARY_SECRET=your_secrete_goes_here 
